--- a/jobs.html
+++ b/jobs.html
@@ -18,7 +18,7 @@
           </div>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./job.html">Jobs</a></li>
+            <li><a href="./jobs.html">Jobs</a></li>
             <li><a href="./apply.html">Apply</a></li>
             <li><a href="./about.html">About</a></li>
           </ul>
@@ -34,8 +34,8 @@
         <h2>Table of Content</h2>
         <ol>
             <!-- đổi hết draft html to job html -->
-            <li><a href="job.html#cto">Chief Technology Officer</a></li>
-            <li><a href="job.html#cloud_en">Cloud Engineer</a></li>
+            <li><a href="jobs.html#cto">Chief Technology Officer</a></li>
+            <li><a href="jobs.html#cloud_en">Cloud Engineer</a></li>
         </ol>
 
         <section>
@@ -46,12 +46,12 @@
                 <dt><strong>Title of the position of successful applicant</strong></dt>
                 <dd>Chief Technology Officer</dd>
                 <dt><strong>Salary range</strong></dt>
-                <dd>237,500 &#8211; 376,665 AUD&#x2F;year <sup><a href="job.html#cite">[1]</a></sup></dd>
+                <dd>237,500 &#8211; 376,665 AUD&#x2F;year <sup><a href="jobs.html#cite">[1]</a></sup></dd>
             </dl>
             <h3>Brief Description</h3>
             <p>
-                A Chief Technology Officer needs to improve and perform new technology to establish or innovate our products (including both goods and services) for the client and the customers. <sup><a href="job.html#cite">[5]</a></sup>
-                They ensure that the technical improvements go in line with the company&#39;s target and that the technological resources are used for the right intention &#8211; for technological development. <sup><a href="job.html#cite">[4]</a></sup>
+                A Chief Technology Officer needs to improve and perform new technology to establish or innovate our products (including both goods and services) for the client and the customers. <sup><a href="jobs.html#cite">[5]</a></sup>
+                They ensure that the technical improvements go in line with the company&#39;s target and that the technological resources are used for the right intention &#8211; for technological development. <sup><a href="jobs.html#cite">[4]</a></sup>
             </p>
             <h3>Key Responsibilities</h3>
             <ul>
@@ -109,7 +109,7 @@
                 <li>Qualification
                     <ul>
                         <li>Master of Computer Science or related fields, a post-graduate degree in computer science or related fields</li>
-                        <li>Experience leading programs and projects within the technological environment with ideally around 15 years <sup><a href="job.html#cite">[5]</a></sup></li>
+                        <li>Experience leading programs and projects within the technological environment with ideally around 15 years <sup><a href="jobs.html#cite">[5]</a></sup></li>
                     </ul>
                 </li>
                 <li>Knowledgeable in Mathematics, Statistics, and Business</li>
@@ -123,14 +123,14 @@
                 <dt><strong>Title of the position of successful applicants</strong></dt>
                 <dd>Cloud Engineer</dd>
                 <dt><strong>Salary range</strong></dt>
-                <dd>132,500 &#8211; 180,000 AUD&#x2F;year <sup><a href="job.html#cite">[3]</a></sup></dd>
+                <dd>132,500 &#8211; 180,000 AUD&#x2F;year <sup><a href="jobs.html#cite">[3]</a></sup></dd>
             </dl>
             <h3>Brief Description</h3>
             <p>
                 A Cloud Engineer needs to create, run, and maintain a cloud infrastructure.
-                This includes sticking to the best performance of the environment and ensuring network security. <sup><a href="job.html#cite">[2]</a></sup>
+                This includes sticking to the best performance of the environment and ensuring network security. <sup><a href="jobs.html#cite">[2]</a></sup>
             </p>
-            <h3>Key Responsibilities <sup><a href="job.html#cite">[6]</a></sup></h3>
+            <h3>Key Responsibilities <sup><a href="jobs.html#cite">[6]</a></sup></h3>
             <ul>
                 <li>Planning and designing cloud computing products such as cloud applications and services</li>
                 <li>Programming codes for cloud systems in coding languages such as Java, Python, C++, …</li>
@@ -187,7 +187,7 @@
                 <li>Qualification
                     <ul>
                         <li>Earning computer certifications such as AWS and GCP</li>
-                        <li>Experiencing in the field for 3+ years <sup><a href="job.html#cite">[6]</a></sup></li>
+                        <li>Experiencing in the field for 3+ years <sup><a href="jobs.html#cite">[6]</a></sup></li>
                         <li>Experience integrating with third party apps supporting designing cloud infrastructures</li>
                     </ul>
                 </li>
@@ -227,7 +227,7 @@
             <h3>Links</h3>
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./job.html">Jobs</a></li>
+              <li><a href="./jobs.html">Jobs</a></li>
               <li><a href="./apply.html">Apply</a></li>
               <li><a href="./about.html">About</a></li>
               <li><a href="./enhancements.html">Enhancements</a></li>
