--- a/apply.html
+++ b/apply.html
@@ -17,7 +17,7 @@
         </div>
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./job.html">Jobs</a></li>
+          <li><a href="./jobs.html">Jobs</a></li>
           <li><a href="./apply.html">Apply</a></li>
           <li><a href="./about.html">About</a></li>
         </ul>
