--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./job.html">Jobs</a></li>
+          <li><a href="./jobs.html">Jobs</a></li>
           <li><a href="./apply.html">Apply</a></li>
           <li><a href="./about.html">About</a></li>
         </ul>
@@ -129,7 +129,7 @@
           <h3>Links</h3>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./job.html">Jobs</a></li>
+            <li><a href="./jobs.html">Jobs</a></li>
             <li><a href="./apply.html">Apply</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./enhancements.html">Enhancements</a></li>
