Adding enhancement documentations, synchronizing footer

--- a/about.html
+++ b/about.html
@@ -12,7 +12,12 @@
     <header>
       <nav id="header-nav">
         <div class="logo">
-          <p>logo</p>
+          <img
+            src="./images/logo-removebg-preview.png"
+            alt="LOGO"
+            width="80"
+            height="80"
+          />
         </div>
         <ul>
           <li><a href="./index.html">Home</a></li>
@@ -151,7 +156,11 @@
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
-          <img src="logo.png" class="logo" alt="LOGO" />
+          <img
+            src="./images/logo-removebg-preview.png"
+            class="logo"
+            alt="LOGO"
+          />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
             "Cloud engineering", including base position, skills needed,
