--- a/apply.html
+++ b/apply.html
@@ -13,7 +13,12 @@
     <header>
       <nav id="header-nav">
         <div class="logo">
-          <p>logo</p>
+          <img
+            src="./images/logo-removebg-preview.png"
+            alt="LOGO"
+            width="80"
+            height="80"
+          />
         </div>
         <ul>
           <li><a href="./index.html">Home</a></li>
@@ -268,13 +273,13 @@
           />
           <label class="apply-label" for="skill5">Time management</label><br />
           <input
-          class="apply-input"
-          type="checkbox"
-          id="skill6"
-          name="skills[]"
-          value="risk_management"
-        />
-        <label class="apply-label" for="skill6">Risk management</label><br />
+            class="apply-input"
+            type="checkbox"
+            id="skill6"
+            name="skills[]"
+            value="risk_management"
+          />
+          <label class="apply-label" for="skill6">Risk management</label><br />
           <input
             class="apply-input"
             type="checkbox"
@@ -303,7 +308,7 @@
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
-          <img src="logo.png" class="logo" alt="logo" />
+          <img src="images/logo-removebg-preview.png" class="logo" alt="LOGO" />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
             "Cloud engineering", including base position, skills needed,
@@ -313,18 +318,18 @@
 
         <div class="footer-col">
           <h3>Officer</h3>
-          <p class="email-id">email : 104082552@student.swin.edu.au</p>
-          <p>phone number : +61 423032755</p>
+          <p class="footer-email-id">Email : 104082552@student.swin.edu.au</p>
+          <p>Phone number : +61 423032755</p>
         </div>
 
         <div class="footer-col">
           <h3>Links</h3>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#jobs">Jobs</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#Links">Link reference</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./jobs.html">Jobs</a></li>
+            <li><a href="./apply.html">Apply</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./enhancements.html">Enhancements</a></li>
           </ul>
         </div>
         <div class="footer-col">
