--- a/enhancements.html
+++ b/enhancements.html
@@ -10,14 +10,72 @@
     <meta name="description" content="Website enhancements" />
   </head>
   <body>
+    <a href="index.html"><--- Go back to main page</a>
     <h1>Enhancements</h1>
-    <h2><a href="apply.html">CSS Heading Typing Animation</a></h2>
-    <p>This enhancement uses advanced CSS such as keyframes and animations.</p>
-    <p>The animation is done by placing the page heading into a container, then gradually increasing the width of the container to make it look like the text is being typed out. For the blinking cursor animation, the right border of the container alternates between solid black and transparent.</p>
-    <p>Due to each heading having different lengths, the CSS must be adapted individually to fit each heading. 
-      <p>The animation is done using only HTML and CSS, and the keyframes and animations go beyond what was taught in the lectures. Overall, the aim of this enhancement was to make the website more dynamic and enjoyable to use, therefore increasing the quality of the website and making it more engaging to users.</p>
+    <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
+    <p>
+      The first enhancement uses advanced CSS such as keyframes and animations.
+    </p>
+    <p>
+      The animation is done by placing the page heading into a container, then
+      gradually increasing the width of the container to make it look like the
+      text is being typed out. For the blinking cursor animation, the right
+      border of the container alternates between solid black and transparent.
+    </p>
+    <p>
+      Due to each heading having different lengths, the CSS must be adapted
+      individually to fit each heading.
+    </p>
+    <p>
+      The animation is done using only HTML and CSS, and the keyframes and
+      animations go beyond what was taught in the lectures. Overall, the aim of
+      this enhancement was to make the website more dynamic and enjoyable to
+      use, therefore increasing the quality of the website and making it more
+      engaging to users.
+    </p>
     <strong>References:</strong>
-    <p>Marko n.d., ‘CSS Typing Effect’, Codepen, viewed 31 March 2023, https://codepen.io/denic/pen/GRoOxbM.</p>
-    <p>Nikonorov, M 2021, ‘How to Create a CSS Typewriter Effect for Your Website — SitePoint’, www.sitepoint.com, viewed 31 March 2023, https://www.sitepoint.com/css-typewriter-effect.</p>
+    <p>
+      Marko n.d., ‘CSS Typing Effect’, Codepen, viewed 31 March 2023,
+      https://codepen.io/denic/pen/GRoOxbM.
+    </p>
+    <p>
+      Nikonorov, M 2021, ‘How to Create a CSS Typewriter Effect for Your Website
+      — SitePoint’, www.sitepoint.com, viewed 31 March 2023,
+      https://www.sitepoint.com/css-typewriter-effect.
+    </p>
+
+    <h2><a href="about.html">Second: CSS Hovering Card Animation</a></h2>
+    <p>The second enhancement uses simple hover CSS animation.</p>
+    <p>
+      The animation is done by adding a hover effect to the group member's card.
+    </p>
+    <p>
+      When the user hovers the group member's card, the card will scale up 20%,
+      the background color of the card changes to the purple linear gradient
+      color, the member's image will scale 10% up and the text color will
+      changes into white. In addition, the 'Contact Us' button will also scale
+      up 20% and change its color to purple linear gradient while user hovering
+      it.
+    </p>
+    <p>
+      This animation is done by only using HTML and simple CSS hover attribute.
+      The aim of this animation was to make the about page looks more modern and
+      ease to use, thus increasing the website's quality and consistency.
+    </p>
+    <strong>References:</strong>
+    <p>
+      Ivanov, A 2022, 'Adding a Gradient Hover Effect to Buttons with CSS',
+      www.stackdiary.com, viewed 20 March 2023,
+      https://stackdiary.com/gradient-hover-effect-css/
+    </p>
+    <p>
+      W3Schools n.d., 'CSS :hover Selector', W3Schools.com, viewed 20 March
+      2023, https://www.w3schools.com/cssref/sel_hover.php
+    </p>
+    <p>
+      Coding Artist 2022, 'Responsive Our Team Section | CSS Tutorial | With
+      Source Code', youtube.com, viewed 20 March 2023,
+      https://www.youtube.com/watch?v=H_64n7gY3h0
+    </p>
   </body>
 </html>
