--- a/jobs.html
+++ b/jobs.html
@@ -14,7 +14,12 @@
     <header>
         <nav id="header-nav">
           <div class="logo">
-            <p>logo</p>
+            <img
+            src="./images/logo-removebg-preview.png"
+            alt="LOGO"
+            width="80"
+            height="80"
+          />
           </div>
           <ul>
             <li><a href="./index.html">Home</a></li>
@@ -209,7 +214,7 @@
     <footer id="general-footer">
         <div class="footer-row">
           <div class="footer-col">
-            <img src="logo.png" class="logo" alt="LOGO" />
+            <img src="images/logo-removebg-preview.png" class="logo" alt="LOGO" />
             <p>
               Our company provides details of "Chief Technology Officer(CTO)" and
               "Cloud engineering", including base position, skills needed,
