Adding images to the about page and adding member's name

--- a/about.html
+++ b/about.html
@@ -31,19 +31,15 @@
       <div class="about-container">
         <div class="header-container">
           <div class="about-typed-out">
-            <h1 class="about-h1">About our lovely team</h1>
+            <h1 class="about-h1">About our team</h1>
           </div>
         </div>
         <p class="about-p">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+          We are a team of quick learners who are always on the lookout for the
+          latest advancements in the cloud technology industry. We continuously
+          upgrade our skills and knowledge through attending conferences,
+          training programs, and workshops to stay upgrade of the latest trends
+          and technologies.
         </p>
         <div class="about-group-info">
           <dl>
@@ -64,29 +60,29 @@
           </dl>
         </div>
         <div class="about-card">
-          <img src="./images/messi.png" alt="Member 1" />
-          <h3 class="about-h3">Member 1</h3>
-          <p>Role: Front-end Developer</p>
+          <img src="./images/member/Simon.png" alt="Member 1" />
+          <h3 class="about-h3">Tuan Minh</h3>
+          <p>Role: Leader</p>
         </div>
         <div class="about-card">
           <img src="./images/messi.png" alt="Member 2" />
-          <h3 class="about-h3">Member 2</h3>
-          <p>Role: Back-end Developer</p>
+          <h3 class="about-h3">Nathan</h3>
+          <p>Role: Co-Leader</p>
         </div>
         <div class="about-card">
           <img src="./images/messi.png" alt="Member 3" />
-          <h3 class="about-h3">Member 3</h3>
-          <p>Role: Full-stack Developer</p>
+          <h3 class="about-h3">Mai An</h3>
+          <p>Role: Member</p>
         </div>
         <div class="about-card">
           <img src="./images/messi.png" alt="Member 4" />
-          <h3 class="about-h3">Member 4</h3>
-          <p>Role: UI/UX Designer</p>
+          <h3 class="about-h3">Amiru</h3>
+          <p>Role: Member</p>
         </div>
         <div class="about-card">
           <img src="./images/messi.png" alt="Member 5" />
-          <h3 class="about-h3">Member 5</h3>
-          <p>Role: Project Manager</p>
+          <h3 class="about-h3">Nhat Minh</h3>
+          <p>Role: Member</p>
         </div>
         <div class="about-timetable">
           <h2 class="about-h2">Timetable</h2>
