add mai an's image (member)

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
           <p>Role: Co-Leader</p>
         </div>
         <div class="about-card">
-          <img src="./images/messi.png" alt="Member 3" />
+          <img src="./images/member/MaiAn.JPG" alt="Member 3" />
           <h3 class="about-h3">Mai An</h3>
           <p>Role: Member</p>
         </div>
