add padding to enhancements page

--- a/enhancements.html
+++ b/enhancements.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Website enhancements" />
   </head>
   <body>
+    <main class="enhancements-main">
     <a href="index.html"><--- Go back to main page</a>
     <h1>Enhancements</h1>
     <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
@@ -77,5 +78,6 @@
       Source Code', youtube.com, viewed 20 March 2023,
       https://www.youtube.com/watch?v=H_64n7gY3h0
     </p>
+  </main>
   </body>
 </html>
