make logo redirect to home page on click

--- a/apply.html
+++ b/apply.html
@@ -13,12 +13,13 @@
     <header>
       <nav id="header-nav">
         <div class="logo">
-          <img
+          <a href="index.html">
+            <img
             src="./images/logo-removebg-preview.png"
             alt="LOGO"
             width="80"
             height="80"
-          />
+          /></a>
         </div>
         <ul>
           <li><a href="./index.html">Home</a></li>
