--- a/jobs.html
+++ b/jobs.html
@@ -14,12 +14,13 @@
     <header>
         <nav id="header-nav">
           <div class="logo">
+            <a href="index.html">
             <img
             src="./images/logo-removebg-preview.png"
             alt="LOGO"
             width="80"
             height="80"
-          />
+          /></a>
           </div>
           <ul>
             <li><a href="./index.html">Home</a></li>
