add member image

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           <p>Role: Leader</p>
         </div>
         <div class="about-card">
-          <img src="./images/messi.png" alt="Member 2" />
+          <img src="./images/member/Nathan.jpeg" alt="Member 2" />
           <h3 class="about-h3">Nathan</h3>
           <p>Role: Co-Leader</p>
         </div>
