Add some transitions on the footer

--- a/about.html
+++ b/about.html
@@ -12,14 +12,16 @@
     <header>
       <nav id="header-nav">
         <div class="logo">
-          <a href="index.html">
+          <p>
             <img
-            src="./images/logo-removebg-preview.png"
-            alt="LOGO"
-            width="80"
-            height="80"
-          /></a>
+              src="./images/logo-removebg-preview.png"
+              alt="LOGO"
+              width="80"
+              height="80"
+            />
+          </p>
         </div>
+
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./jobs.html">Jobs</a></li>
@@ -53,7 +55,7 @@
           </dl>
           <dl>
             <dt>Tutor's Name</dt>
-            <dd>Grace Tao Dep Trai</dd>
+            <dd>Grace Tao</dd>
           </dl>
           <dl>
             <dt>Course</dt>
@@ -166,9 +168,13 @@
         </div>
 
         <div class="footer-col">
-          <h3>Officer</h3>
-          <p class="footer-email-id">Email : 104082552@student.swin.edu.au</p>
-          <p>Phone number : +61 423032755</p>
+          <h3>Informations</h3>
+          <p class="footer-email-id">
+            <a href="mailto:abcxyz@concac.com" class="footer-email-id"
+              >Email : 104082552@student.swin.edu.au</a
+            >
+          </p>
+          <p>Phone Number : +61423032755</p>
         </div>
 
         <div class="footer-col">
@@ -182,7 +188,7 @@
           </ul>
         </div>
         <div class="footer-col">
-          <h3>Newsletter</h3>
+          <h3>Email Us</h3>
           <form>
             <input type="email" placeholder="Enter Your email id" required />
             <input type="submit" />
