--- a/jobs.html
+++ b/jobs.html
@@ -36,7 +36,7 @@
                 <h1>Our open positions</h1>
             </div>
         </div>
-    
+
         <h2>Table of Content</h2>
         <ol>
             <!-- đổi hết draft html to job html -->
@@ -225,7 +225,11 @@
 
           <div class="footer-col">
             <h3>Officer</h3>
-            <p class="footer-email-id">Email : 104082552@student.swin.edu.au</p>
+            <p class="footer-email-id">
+                <a href="mailto:abcxyz@concac.com" class="footer-email-id"
+                  >Email : 104082552@student.swin.edu.au</a
+                >
+              </p>
             <p>Phone number : +61 423032755</p>
           </div>
 
