Updating index.html with its style and images

--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Apply to our open positions" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>CloudLabs</title>
   </head>
-
   <body>
     <header>
       <nav id="header-nav">
         <div class="logo">
-          <p>logo</p>
+          <a href="index.html">
+            <img
+              src="./images/logo-removebg-preview.png"
+              alt="LOGO"
+              width="80"
+              height="80"
+          /></a>
         </div>
-        <ul>
+        <ul class="list">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./jobs.html">Jobs</a></li>
           <li><a href="./apply.html">Apply</a></li>
@@ -23,95 +27,101 @@
         </ul>
       </nav>
     </header>
-    <main class="index-main">
+    <div class="img">
+      <br />
+      <br />
+      <p>&nbsp;</p>
+      <br />
       <h1>This is CloudLabs</h1>
-
+      <br />
       <h2>
         We create your dream website with our inhouse specialist team with ease
         to your mind
       </h2>
-
-      <img
-        src="images/web-ui-ux-design-web-development-concept-web-design-application-design-coding-web-building-white-background-3d-vector-illustration_145666-1590.jpg.avif"
-        class="main-img"
-        alt="web-ui-ux-design"
-      />
-
-      <p>
-        We specialize in creating stunning, responsive, and user-friendly
-        websites that are tailored to meet the unique needs of our clients. With
-        a focus on creativity, innovation, and cutting-edge technology, we're
-        committed to delivering exceptional results that exceed your
-        expectations. Let us help you take your online presence to the next
-        level. Contact us today to learn more about our services!
+      <p class="first-para">
+        <img src="images/code.jpeg" class="img-2" alt="web-ui-ux-design" />
+        Welcome to our web development company, where we specialize in creating
+        custom websites and web applications for businesses of all sizes. We
+        believe that a strong online presence is essential for success in
+        today's digital age, and we are committed to helping our clients achieve
+        their goals through expert web development services.
+        <br /><br />
+        Our team of experienced developers, designers, and project managers work
+        closely with each client to understand their unique needs and create a
+        website or web application that perfectly fits their vision. We use the
+        latest technologies and design trends to ensure that every website we
+        create is modern, fast, and user-friendly.
       </p>
 
-      <h3>Services we provide</h3>
-      <div class="row">
-        <div class="column">Service number</div>
-        <div class="column">Service number</div>
-        <div class="column">Service number</div>
-      </div>
+      <div>
+        <h2>Services we Provide</h2>
 
-      <div class="row">
-        <div class="column">Service number</div>
-        <div class="column">Service number</div>
-        <div class="column">Service number</div>
-      </div>
-
-      <div class="row">
-        <div class="column">Service number</div>
-        <div class="column">Service number</div>
-        <div class="column">Service number</div>
-      </div>
-
-      <h3>Get to know us from our customers,</h3>
-
-      <div class="review-box">
-        <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
-          <p class="review-wording">
-            One of the worst public toilets I have encountered.Would the council
-            go bust if they got some bleach and mopped it once a day at least.
-          </p>
+        <div class="row">
+          <div class="column">Content Marketing</div>
+          <div class="column">Digital Marketing</div>
+          <div class="column">Email Marketing</div>
+        </div>
+        <div class="row">
+          <div class="column">SEO</div>
+          <div class="column">Web Development</div>
+          <div class="column">Web Optimization</div>
         </div>
       </div>
+    </div>
+    <div class="img">
+      <br />
+      <br />
+      <h2>Companies we have worked with</h2>
 
-      <div class="review-box">
-        <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
-          <p class="review-wording">
-            One of the worst public toilets I have encountered.Would the council
-            go bust if they got some bleach and mopped it once a day at least.
+      <div class="logos">
+        <img class="logo-indi" src="images/forbes.png" alt="forbes" />
+        <img class="logo-indi" src="images/google.png" alt="google" />
+        <img class="logo-indi" src="images/bloomberg.png" alt="bloomberg" />
+        <img class="logo-indi" src="images/oracle.png" alt="oracle" />
+        <img class="logo-indi" src="images/lenovo.png" alt="lenovo" />
+        <img class="logo-indi" src="images/apple.png" alt="apple" />
+        <img class="logo-indi" src="images/microsoft.png" alt="microsoft" />
+        <img class="logo-indi" src="images/swinburne.png" alt="swinburne" />
+        <img class="logo-indi" src="images/nestle.png" alt="nestle" />
+        <img class="logo-indi" src="images/youtube.png" alt="youtube" />
+      </div>
+      <h2>Here's some of our client reviews</h2>
+      <div class="reviews-container">
+        <h2>Reviews</h2>
+        <div class="review-card">
+          <div class="rating">
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9734;</span>
+          </div>
+          <p class="review-text">
+            "The team is amazing! I love how easy it is to customize and the
+            quality is top-notch."
           </p>
+          <p class="author">- John Doe</p>
+        </div>
+        <div class="review-card">
+          <div class="rating">
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
+          <p class="review-text">
+            "Best company to get your website built in melbourne hands down."
+          </p>
+          <p class="author">- Jane Smith</p>
         </div>
       </div>
-
-      <div class="review-box">
-        <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
-          <p class="review-wording">
-            One of the worst public toilets I have encountered.Would the council
-            go bust if they got some bleach and mopped it once a day at least.
-          </p>
-        </div>
-      </div>
-
-      <div class="review-box">
-        <div class="review-box-indi">
-          <img src="images/cat.jpeg" class="profile-pic" alt="cat" />
-          <p class="review-wording">
-            One of the worst public toilets I have encountered.Would the council
-            go bust if they got some bleach and mopped it once a day at least.
-          </p>
-        </div>
-      </div>
-    </main>
+    </div>
 
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
-          <img src="logo.png" class="logo" alt="LOGO" />
+          <img src="images/logo-removebg-preview.png" class="logo" alt="LOGO" />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
             "Cloud engineering", including base position, skills needed,
@@ -129,7 +139,7 @@
           <h3>Links</h3>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./jobs.html">Jobs</a></li>
+            <li><a href="./job.html">Jobs</a></li>
             <li><a href="./apply.html">Apply</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./enhancements.html">Enhancements</a></li>
