Adding Amiru to about.html :)

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./images/messi.png" alt="Member 4" />
+          <img src="./images/member/amiru.jpg" alt="Member 4" />
           <h3 class="about-h3">Amiru</h3>
           <p>Role: Member</p>
         </div>
