Adding Nhat Minh Not Handsome

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./images/messi.png" alt="Member 5" />
+          <img src="./images/member/Nhatminh.jpg" alt="Member 5" />
           <h3 class="about-h3">Nhat Minh</h3>
           <p>Role: Member</p>
         </div>
