update footer on all pages

--- a/about.html
+++ b/about.html
@@ -168,13 +168,13 @@
         </div>
 
         <div class="footer-col">
-          <h3>Informations</h3>
+          <h3>Contact us</h3>
           <p class="footer-email-id">
-            <a href="mailto:abcxyz@concac.com" class="footer-email-id"
-              >Email : 104082552@student.swin.edu.au</a
+            <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
+              >Email: 104082552@student.swin.edu.au</a
             >
           </p>
-          <p>Phone Number : +61423032755</p>
+          <p>Phone Number: +61423032755</p>
         </div>
 
         <div class="footer-col">
@@ -188,15 +188,15 @@
           </ul>
         </div>
         <div class="footer-col">
-          <h3>Email Us</h3>
+          <h3>Sign up to our newsletter</h3>
           <form>
-            <input type="email" placeholder="Enter Your email id" required />
+            <input type="email" placeholder="Enter your email here" required />
             <input type="submit" />
           </form>
         </div>
       </div>
       <hr />
-      <p>Deadline is coming 2023 &copy - All Rights Reserved</p>
+      <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
     </footer>
   </body>
 </html>
