--- a/apply.html
+++ b/apply.html
@@ -309,7 +309,11 @@
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
-          <img src="images/logo-removebg-preview.png" class="logo" alt="LOGO" />
+          <img
+            src="./images/logo-removebg-preview.png"
+            class="logo"
+            alt="LOGO"
+          />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
             "Cloud engineering", including base position, skills needed,
@@ -318,13 +322,13 @@
         </div>
 
         <div class="footer-col">
-          <h3>Officer</h3>
+          <h3>Contact us</h3>
           <p class="footer-email-id">
-            <a href="mailto:abcxyz@concac.com" class="footer-email-id"
-              >Email : 104082552@student.swin.edu.au</a
+            <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
+              >Email: 104082552@student.swin.edu.au</a
             >
           </p>
-          <p>Phone number : +61 423032755</p>
+          <p>Phone Number: +61423032755</p>
         </div>
 
         <div class="footer-col">
@@ -338,15 +342,15 @@
           </ul>
         </div>
         <div class="footer-col">
-          <h3>Newsletter</h3>
+          <h3>Sign up to our newsletter</h3>
           <form>
-            <input type="email" placeholder="Enter Your email id" required />
+            <input type="email" placeholder="Enter your email here" required />
             <input type="submit" />
           </form>
         </div>
       </div>
       <hr />
-      <p>Deadline is coming 2023 &copy; - All Rights Reserved</p>
+      <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
     </footer>
   </body>
 </html>
