--- a/enhancements.html
+++ b/enhancements.html
@@ -79,5 +79,51 @@
       https://www.youtube.com/watch?v=H_64n7gY3h0
     </p>
   </main>
+  <footer id="general-footer">
+    <div class="footer-row">
+      <div class="footer-col">
+        <img
+          src="./images/logo-removebg-preview.png"
+          class="logo"
+          alt="LOGO"
+        />
+        <p>
+          Our company provides details of "Chief Technology Officer(CTO)" and
+          "Cloud engineering", including base position, skills needed,
+          qualification and salary average per year in Australia.
+        </p>
+      </div>
+
+      <div class="footer-col">
+        <h3>Contact us</h3>
+        <p class="footer-email-id">
+          <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
+            >Email: 104082552@student.swin.edu.au</a
+          >
+        </p>
+        <p>Phone Number: +61423032755</p>
+      </div>
+
+      <div class="footer-col">
+        <h3>Links</h3>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./jobs.html">Jobs</a></li>
+          <li><a href="./apply.html">Apply</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./enhancements.html">Enhancements</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h3>Sign up to our newsletter</h3>
+        <form>
+          <input type="email" placeholder="Enter your email here" required />
+          <input type="submit" />
+        </form>
+      </div>
+    </div>
+    <hr />
+    <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
+  </footer>
   </body>
 </html>
