--- a/backups/HTML/header_footer.html
+++ b/backups/HTML/header_footer.html
@@ -1,64 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" id="about">
-  <head>
+<html lang="en">
+  <head class="about-head">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/header_footer_last_changes.css" />
-    <title>Header</title>
+    <link rel="stylesheet" href="./styles/header_footer.css"/>
+    <title> Header Footer</title>
   </head>
   <body>
-    <header>
-      <nav id="header-nav">
-        <div class="logo">
-          <p>logo</p>
+    <nav> 
+        <div>
+             <img class="logo" src="./images/favicon.png" alt="LOGO">
         </div>
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./job.html">Jobs</a></li>
-          <li><a href="./apply.html">Apply</a></li>
-          <li><a href="./about.html">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Apply</a></li>
+            <li><a href="#">About</a></li> 
         </ul>
-      </nav>
-    </header>
+    </nav>
+      <footer>
+        <div class="row">
+          <div class="col"> 
+            <img src="./images/project.png" class="logo" alt="LOGO" >
+            <p> Our company provides details of "Chief Technology Officer(CTO)" and "Cloud engineering", including
+            base position, skills needed, qualification and salary average per year in Australia. </p>
+          </div>
 
-    <footer id="general-footer">
-      <div class="footer-row">
-        <div class="footer-col">
-          <img src="logo.png" class="logo" alt="LOGO" />
-          <p>
-            Our company provides details of "Chief Technology Officer(CTO)" and
-            "Cloud engineering", including base position, skills needed,
-            qualification and salary average per year in Australia.
-          </p>
-        </div>
+          <div class="col">
+            <h3> Officer</h3>
+            <p class="email-id"> email : 104082552@student.swin.edu.au</p>
+            <p> phone number : +61 423032755 </p>
+          </div>
 
-        <div class="footer-col">
-          <h3>Officer</h3>
-          <p class="footer-email-id">Email : 104082552@student.swin.edu.au</p>
-          <p>Phone number : +61 423032755</p>
+          <div class="col">
+            <h3> Links</h3>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Link reference</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3> Newsletter</h3>
+            <form> 
+              <input type="email" placeholder="Enter Your email id" required>
+              <input type="submit">
+            </form>
+          </div>
         </div>
-
-        <div class="footer-col">
-          <h3>Links</h3>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./job.html">Jobs</a></li>
-            <li><a href="./apply.html">Apply</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./enhancements.html">Enhancements</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h3>Newsletter</h3>
-          <form>
-            <input type="email" placeholder="Enter Your email id" required />
-            <input type="submit" />
-          </form>
-        </div>
-      </div>
-      <hr />
-      <p>Deadline is coming 2023 &copy - All Rights Reserved</p>
-    </footer>
+        <hr> 
+        <p>Deadline Is Coming 2023 &#169; - All Rights Reserved</p>
+      </footer>
   </body>
-</html>
+  </html>
