add header to enhancements page

--- a/enhancements.html
+++ b/enhancements.html
@@ -10,8 +10,26 @@
     <meta name="description" content="Website enhancements" />
   </head>
   <body>
+    <header>
+      <nav id="header-nav">
+        <div class="logo">
+          <a href="index.html">
+            <img
+              src="./images/logo-removebg-preview.png"
+              alt="LOGO"
+              width="80"
+              height="80"
+          /></a>
+        </div>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./jobs.html">Jobs</a></li>
+          <li><a href="./apply.html">Apply</a></li>
+          <li><a href="./about.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="enhancements-main">
-    <a href="index.html"><--- Go back to main page</a>
     <h1>Enhancements</h1>
     <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
     <p>
