add typing effect to index page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
     <div class="img">
       <br />
       <br />
-      <p>&nbsp;</p>
       <br />
-      <h1>This is CloudLabs</h1>
+        <div class="header-container">
+          <div class="index-typed-out">
+            <h1>This is CloudLabs</h1>
+          </div>
+          </div>
       <br />
       <h2>
         We create your dream website with our inhouse specialist team with ease
