--- a/about.html
+++ b/about.html
@@ -12,16 +12,14 @@
     <header>
       <nav id="header-nav">
         <div class="logo">
-          <p>
+          <a href="index.html">
             <img
               src="./images/logo-removebg-preview.png"
               alt="LOGO"
               width="80"
               height="80"
-            />
-          </p>
+          /></a>
         </div>
-
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./jobs.html">Jobs</a></li>
