--- a/jobs.html
+++ b/jobs.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <h2>Table of Content</h2>
+        <h2>Table of Contents</h2>
         <ol>
             <!-- đổi hết draft html to job html -->
             <li><a href="jobs.html#cto">Chief Technology Officer</a></li>
