show what page you're on in the header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           /></a>
         </div>
         <ul class="list">
-          <li><a href="./index.html">Home</a></li>
+          <li id="selected-page"><a href="./index.html">Home</a></li>
           <li><a href="./jobs.html">Jobs</a></li>
           <li><a href="./apply.html">Apply</a></li>
           <li><a href="./about.html">About</a></li>
