--- a/apply.html
+++ b/apply.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./jobs.html">Jobs</a></li>
-          <li><a href="./apply.html">Apply</a></li>
+          <li id="selected-page"><a href="./apply.html">Apply</a></li>
           <li><a href="./about.html">About</a></li>
         </ul>
       </nav>
